--- a/input/stylesheets/_main.sass
+++ b/input/stylesheets/_main.sass
@@ -45,16 +45,11 @@ main
     :display block
   > span
     :display block
-    +ui-tooltip(left, $border-radius: 6px, $tip-color: #88b7d5, $tip-color-alt: #c2e1f5, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
+    +ui-tooltip(left, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
     :color #fff
     +text-shadow(0 1px 0px #333)
     :padding 4px
     +adjust-font-size-to(14px)
   &.top
     > span
-      +ui-tooltip(top, $border-radius: 6px, $tip-color: #88b7d5, $tip-color-alt: #c2e1f5, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
-      &:before, &:after
-        :right 0
-        :left auto
-      &:after
-        :margin-right 5px
+      +ui-tooltip(top, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
