--- a/input/stylesheets/_grid.sass
+++ b/input/stylesheets/_grid.sass
@@ -19,6 +19,7 @@ ul.grid, ul.grid ~ ul
     :position relative
     :cursor pointer
     +transition(border-color 0.3s, border-radius 0.3s, background-color 0.3s)
+    :background-color rgba(#fff, 0.2)
     video
       :display block
       :background #333
