--- a/input/stylesheets/_grid.sass
+++ b/input/stylesheets/_grid.sass
@@ -38,6 +38,9 @@ ul.grid, ul.grid ~ ul
       :border-color #888
       :background-color rgba(#3f6f25, 0.1)
       :border-style solid
+      h2
+        a
+          :color #111
       .play.button
         :opacity 1
       +border-radius(0.35em 1.4em 0.35em 0.35em)
